--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
+    "framer-motion": "^11.0.28",
     "next": "^14.2.0",
     "react": "^18",
     "react-currency-input-field": "^3.8.0",
