--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
     "framer-motion": "^11.0.28",
+    "lucide-react": "^0.370.0",
     "next": "^14.2.0",
+    "next-auth": "^5.0.0-beta.16",
     "react": "^18",
     "react-currency-input-field": "^3.8.0",
     "react-dom": "^18",
