--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,10 @@ POSTGRES_URL="postgresql://postgres@localhost:5432/planee"
 POSTGRES_URL_NON_POOLING=postgresql://postgres@localhost:5432/planee
 
 NODE_ENV=development
+
+# Authorisation
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="WsZobY8Hs74ecfsY6oGXRIKOGf8qsaTOqOcKf63LvHc="
+
+AUTH_GITHUB_ID="829dd0bdfd341fa752e0"
+AUTH_GITHUB_SECRET="42f54009928c482a9991f988e92c59a782367b0e"
